# Dashboard-data

./: kernels.json
1/: Cuda.json  Opencl.json  Opencl.txt  SYCL.txt  backends.json  cuda.txt  hip.txt  ispc.txt  nomp.txt
2/: Cuda.json  Cuda.txt  ISPC.txt  Opencl.json  backends.json  nomp.txt
3/: Cuda.json  HIP.json  Opencl.json  backends.json
4/: Cuda.json  ISPC.json  Opencl.txt  SYCL.json  SYCL.txt  backends.json
matrix-multiplication/: CMakeLists.txt  README.md  cuda.cu  ispc.c  matrix-mul.ispc  nomp.c  omp_offload.c  openmp.c  transforms.py
pi-integration/: CMakeLists.txt  README.md  cuda.cu  ispc.c  nomp.c  omp_offload.c  opencl.c  openmp.c  pi-integration.ispc
sum-reduction/: CMakeLists.txt  README.md  omp_offload.c  opencl.c  openmp.c  sum-reduction.ispc
